# zord

./: .gitignore  README.md  pyproject.toml
examples/: plan_synthetic.py
results/: README.md  attr_partition_79134.csv  dglpart_151538.csv  disp_151530.csv  e12_mag_151416.csv  gpu_e2e_exp3.csv  gpu_e2e_kmp.csv  gpu_e2e_pinned.csv  gpu_e2e_polish.csv  gpu_e2e_prof.csv  gpu_e2e_rtx6000.csv  gpu_e2e_tf1k.csv  gpu_e2e_train.csv  kmpb_151531.csv  pygref_151532.csv  tgn_all_151459.csv  tgn_linkpred_151415.csv  tgnmem_151537.csv
results/cluster_archive/: attr_partition.csv  gpu_e2e_b_direct.csv  gpu_e2e_b_legacy.csv  (+14 more)
scripts/: arrange_streaming.py  attr_aware_partition.py  attr_exploit.py  attr_partition_real.py  attr_placement.py  attribute_cost.py  backlog_verify.py  barrier_vs_k.py  cache_tiling.py  comm_bench.py  comm_bench.sbatch  compare.sbatch  compare_partitioners.py  composition.py  dist_scaling.py  dist_scaling.sbatch  duality_frontier.py  dynamic_run.py  end_to_end.py  end_to_end.sbatch  end_to_end_pipeline.py  end_to_end_zord.py  exp_attr_partition.py  exp_dgl_partition.py  exp_gpu_e2e.py  exp_tgn_memory.py  feature_parallel.py  fill_dynamics.py  granularity_sweep.py  hetero_matched.py  hw_generalization.py  incremental_exp.py  incremental_repartition.py  kernel_roofline.py  limit_probe.py  loss_breakdown.py  lowerbound_check.py  multi_gpu_nvlink.py  multi_gpu_train.py  oom_attr_gpu.py  (+25 more)
tests/: test_basic.py  test_cpp_roundtrip.py  test_feature_recombine.py  test_kernel_wiring.py  test_planner.py  test_planner_d1_allresident.py  test_runtime_memtier.py
(+52 files in other folders)
